<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.camera.view.PreviewView
        android:id="@+id/viewfinder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <ToggleButton
        android:id="@+id/video_toggle_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:checked="true"
        android:drawableStart="@drawable/video_button_toggle"
        android:textOff="@string/text_video_off"
        android:textOn="@string/text_video_on"
        app:icon="@drawable/video_button_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/audio_toggle_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <ToggleButton
        android:id="@+id/audio_toggle_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:checked="true"
        android:drawableStart="@drawable/audio_button_toggle"
        android:textOff="@string/text_audio_off"
        android:textOn="@string/text_audio_on"
        app:icon="@drawable/audio_button_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/video_toggle_button"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />


</androidx.constraintlayout.widget.ConstraintLayout>